# math-for-programmers-samples

./: .flake8  README.md  pyproject.toml
chapter02/: chapter02.ipynb  vector.py  vector_drawing.py  vectors.py
